--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uiw/react-color-wheel": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "next": "^15.1.6",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
   }
