--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "eslint": "9.18.0",
+    "eslint-config-next": "15.1.6"
   }
 }
