--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@uiw/react-color-wheel": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "next": "^15.1.6",
+    "openai": "^4.80.1",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
