--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
     "@uiw/react-color-wheel": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "next": "^15.1.6",
