--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@uiw/react-color-wheel": "^2.3.4",
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.20",
     "next": "^15.1.6",
     "openai": "^4.80.1",
