--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-color-wheel": "^2.3.4",
     "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "next": "^15.1.6",
     "openai": "^4.80.1",
     "postcss": "^8.5.1",
