--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "next": "^15.1.6",
     "openai": "^4.80.1",
     "postcss": "^8.5.1",
